@@ -1,5 +1,11 @@
 2005-11-17  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/ephy-window.c:
+
+	Add F5 as accel for reload.
+
+2005-11-17  Christian Persch  <chpe@cvs.gnome.org>
+
 	* src/pdm-dialog.c:
 
 	Set the model's sort column only after filling it. Vastly improves
